--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel=StyleSheet href="assets/css/style.css" type="text/css" media=screen>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+
+	<script src="assets/javascript/game.js"></script>
+
 </head>
 
 <body>
@@ -23,7 +26,7 @@
 		
 	</div><!--End title row-->
 
-	<div="row"><!--Row of character choices-->
+	<div class="row"><!--Row of character choices-->
 
 		<div id="firstCharacter" class="col-xs-6 col-sm-6 col-md-2 col-lg-2"><!--first character choice columns-->
 
@@ -55,7 +58,7 @@
 
 			<div class="row"><!--character power level row-->
 
-				<h6 class="text-center powerLever">500</h3>
+				<h6 class="text-center powerLever">500</h6>
 				
 			</div><!--End character power level row-->
 			
@@ -73,7 +76,7 @@
 
 			<div class="row"><!--character power level row-->
 
-				<h6 class="text-center powerLever">500</h3>
+				<h6 class="text-center powerLever">500</h6>
 				
 			</div><!--End character power level row-->
 			
@@ -210,6 +213,17 @@
 		</div><!--End chosenDefender column-->
 		
 	</div><!--End chosenDefender available row-->
+
+	<div class="row"><!--Game description row-->
+
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><!--Game description column-->
+
+			<p id="chosenDescription"></p>
+			<p id="defenderDescription"></p>
+			
+		</div><!--End Game description column-->
+		
+	</div><!--End game description row-->
 	
 
 
