--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<div class="row"><!--character name row-->
 
-				<h3 class="text-center">Obi Wan Kanobi</h3>
+				<h3 class="text-center">Obi Wan Kenobi</h3>
 				
 			</div><!--End character name row-->
 
