--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 			<div class="row"><!--enemies available placement row-->
 
-				<div class=" enemiesAvailable col-xs-12 col-sm-12 col-md-12 col-lg-12"><!--enemies available placement column-->
+				<div id="enemiesAvailable" class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><!--enemies available placement column-->
 
 					<!--THIS IS WHERE THE ENEMIES AVAILABLE WILL BE PLACED-->
 					
