all character moving options

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 			<div class="row"><!--chosenDefender placement row-->
 
-				<div class=" enemiesAvailable col-xs-12 col-sm-12 col-md-12 col-lg-12"><!--chosenDefender placement column-->
+				<div id="defender" class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><!--chosenDefender placement column-->
 
 					<!--THIS IS WHERE THE DEFENDER WILL BE PLACED-->
 					
